@@ -3,6 +3,9 @@ Released 2.0.0pre21 2004-03-xx
 
 Changes since 2.0.0pre20:
 
+Modules/:
+* Removed meaningless repr() function from LDAPObject.c
+
 ----------------------------------------------------------------
 Released 2.0.0pre20 2004-03-19
 
